<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.ynmiyou.www.myapplication.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/mainButton"
            android:layout_marginTop="50dp"
            android:text="@string/btn1"
            android:id="@+id/button" />

        <Button
            style="@style/mainButton"
            android:text="@string/btn2"
            android:id="@+id/button2" />

        <Button
            style="@style/mainButton"
            android:text="@string/btn3"
            android:id="@+id/button3" />

        <Button
            style="@style/mainButton"
            android:text="@string/btn4"
            android:id="@+id/button4" />

        <Button
            style="@style/mainButton"
            android:text="@string/btn5"
            android:id="@+id/button5" />

        <Button
            style="@style/mainButton"
            android:text="@string/btn6"
            android:id="@+id/button6" />

    </LinearLayout>
</ScrollView>